script/kind-session-persistence/tests/basic-routing-gateway/backend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: whoami-gw-basic
  namespace: default
spec:
  ports:
    - name: http
      port: 80
  selector:
    app: whoami-gw-basic
