script/kind-session-persistence/tests/basic-routing-gateway/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gw-basic-whoami
  namespace: default
spec:
  parentRefs:
    - name: traefik-gateway
  hostnames:
    - whoami-gw-basic.localhost
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: whoami-gw-basic
          port: 80
